<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToplistFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <Button
        android:text="@string/translate_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/transbutton" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lang_spinner"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/add_phrase_prompt"
            android:ems="10"
            android:id="@+id/textPhrase"
            android:layout_weight="0.12" />

        <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/savePhraseButton"
            android:layout_weight="0.12" />
    </LinearLayout>

    <ListView
        android:id="@+id/listview_phrases"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>